infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-share-api
  namespace: file-share
spec:
  selector:
    app: api-service
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
